--- a/frontend-konark/package.json
+++ b/frontend-konark/package.json
@@ -15,7 +15,9 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "react-spinners": "^0.11.0",
     "react-toastify": "^8.0.3",
+    "react-top-loading-bar": "^2.0.1",
     "slick-carousel": "^1.8.1",
     "swiper": "^6.8.4",
     "uuid": "^8.3.2",
