--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.9.1",
     "nodemon": "^1.19.4",
     "npm": "^6.14.13",
+    "razorpay": "^2.0.7",
     "uuid": "^3.3.3"
   }
 }
