--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "braintree": "^3.7.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
@@ -21,11 +22,13 @@
     "i": "^0.3.6",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "mongoose": "^5.12.12",
     "morgan": "^1.9.1",
+    "multer": "^1.4.4",
     "nodemon": "^1.19.4",
     "npm": "^6.14.13",
-    "razorpay": "^2.0.7",
+    "razorpay": "^2.8.0",
     "uuid": "^3.3.3"
   }
 }
