--- a/frontend-konark/package.json
+++ b/frontend-konark/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "braintree-web-drop-in-react": "^1.2.1",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-loader-spinner": "^4.0.0",
