--- a/frontend-konark/package.json
+++ b/frontend-konark/package.json
@@ -10,6 +10,8 @@
     "bootstrap": "^5.1.3",
     "braintree-web-drop-in-react": "^1.2.1",
     "react": "^17.0.2",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-alice-carousel": "^2.5.1",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
@@ -17,12 +19,6 @@
     "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "react-slick": "^0.28.1",
-    "react-spinners": "^0.11.0",
-    "react-toastify": "^8.0.3",
-    "react-top-loading-bar": "^2.0.1",
-    "slick-carousel": "^1.8.1",
-    "swiper": "^6.8.4",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
