--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "mongoose": "^5.12.12",
     "morgan": "^1.9.1",
     "multer": "^1.4.4",
+    "node-schedule": "^2.1.0",
     "nodemon": "^1.19.4",
     "npm": "^6.14.13",
     "razorpay": "^2.8.0",
+    "twilio": "^3.74.0",
     "uuid": "^3.3.3"
   }
 }
