--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "braintree": "^3.7.0",
+    "cloudinary": "^1.28.1",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-handlebars": "^6.0.2",
     "express-jwt": "^5.3.1",
     "express-validator": "^6.2.0",
     "formidable": "^1.2.1",
@@ -28,10 +30,15 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.4",
     "node-schedule": "^2.1.0",
+    "nodemailer": "^6.7.2",
     "nodemon": "^1.19.4",
     "npm": "^6.14.13",
+    "pdfkit": "^0.13.0",
+    "puppeteer": "^13.4.0",
     "razorpay": "^2.8.0",
-    "twilio": "^3.74.0",
     "uuid": "^3.3.3"
+  },
+  "devDependencies": {
+    "@types/express-handlebars": "^6.0.0"
   }
 }
