--- a/frontend-konark/package.json
+++ b/frontend-konark/package.json
@@ -16,10 +16,9 @@
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "react-top-loading-bar": "^2.1.0",
+    "react-spinners-css": "^2.0.1",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
