--- a/frontend-konark/package.json
+++ b/frontend-konark/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "braintree-web-drop-in-react": "^1.2.1",
+    "google-map-react": "^2.1.10",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
