--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "mongoose": "^5.12.12",
-    "morgan": "^1.9.1",
     "multer": "^1.4.4",
     "node-schedule": "^2.1.0",
     "nodemailer": "^6.7.2",
-    "nodemon": "^1.19.4",
     "puppeteer": "^13.4.0",
     "razorpay": "^2.8.0",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
-    "@types/express-handlebars": "^6.0.0"
+    "@types/express-handlebars": "^6.0.0",
+    "nodemon": "^1.19.4",
+    "morgan": "^1.9.1"
   }
 }
